# custom_ros_publishers

./: README.md  demo_malaga.launch  generate_data_file.sh  lidar_publisher_exec.sh  malaga.launch  malaga.lua  malaga.rviz  malaga.urdf  malaga_2d.launch  malaga_2d.urdf
imu_publisher/: CMakeLists.txt  package.xml
imu_publisher/data/: malaga-urban-dataset-extract-15_all-sensors_IMU.txt
imu_publisher/src/: imu_publisher.cpp
lidar_publisher/: CMakeLists.txt  package.xml
lidar_publisher/data/: malaga-urban-dataset-extract-05_all-sensors_LASER1_times.txt  malaga-urban-dataset-extract-05_all-sensors_LASER2_times.txt  malaga-urban-dataset-extract-15_all-sensors_LASER1_times.txt  malaga-urban-dataset-extract-15_all-sensors_LASER2_times.txt
lidar_publisher/src/: lidar_publisher.cpp
