<?xml version="1.0"?>
<package>
  <name>imu_publisher</name>
  <version>0.0.0</version>
  <description>The imu_publisher package</description>
  
  <maintainer email="pmleva2@gmail.com">pml</maintainer>
  <license>MIT</license>
  <author email="pmleva2@gmail.com">Pierre-Marc Levasseur</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
