<?xml version="1.0"?>
<package>
  <name>lidar_publisher</name>
  <version>0.0.0</version>
  <description>The lidar_publisher package</description>

  <maintainer email="jftremblay255@gmail.com">jft</maintainer>
  <license>MIT</license>
  <author email="jftremblay255@gmail.com">Jean-Francois Tremblay</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
